--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -8,7 +8,7 @@
     android:background="@color/secondary_background_gray"
     android:orientation="vertical"
     android:tag="fragment_information_tag"
-    tools:context=".view.fragment.InformationFragment">
+    tools:context=".presentation.screens.information.InformationFragment">
 
 
     <LinearLayout
