--- a/app/src/main/res/layout/fragment_types_layout.xml
+++ b/app/src/main/res/layout/fragment_types_layout.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".view.fragment.TypesFragment"
+    tools:context=".presentation.screens.types.TypesFragment"
     android:background="@color/secondary_background_gray"
     android:id="@+id/TypesFragment">
 
