--- a/app/src/main/res/drawable/blue_button.xml
+++ b/app/src/main/res/drawable/blue_button.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
     <gradient
-        android:startColor="@color/deep_pool"
-        android:endColor="@color/deep_river_2" />
-
-    <corners android:radius = "40dp"
-        android:bottomLeftRadius="40dp"/>
-
+        android:endColor="@color/deep_river_2"
+        android:startColor="@color/deep_pool" />
+    <corners
+        android:bottomLeftRadius="40dp"
+        android:radius="40dp" />
 </shape>
