--- a/app/src/main/res/layout/dialog_welcome_information_screen.xml
+++ b/app/src/main/res/layout/dialog_welcome_information_screen.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toBottomOf="@+id/informationAreaTv"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/information" />
+            app:lottie_rawRes="@raw/bear_sad" />
 
         <TextView
             android:id="@+id/informationAreaDescriptionTv"
