--- a/app/src/main/res/layout/shimmer_psychologists.xml
+++ b/app/src/main/res/layout/shimmer_psychologists.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/shimmer_card_psychologist_layout"
     android:layout_width="match_parent"
-    android:layout_height="480dp"
+    android:layout_height="wrap_content"
     android:background="@color/secondary_sub_gray">
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_psychologist"
@@ -20,7 +18,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_psychologist"
@@ -70,12 +67,6 @@
             android:layout_width="200dp"
             android:layout_height="20dp"
             android:background="#C9C9C8"
-            android:fontFamily="@font/poppins_regular"
-            android:text=""
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
@@ -88,10 +79,6 @@
             android:layout_width="250dp"
             android:layout_height="64dp"
             android:background="#C9C9C8"
-            android:fontFamily="@font/helvetica_regular"
-            android:textAlignment="center"
-            android:textColor="@color/grass_green"
-            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,10 +89,8 @@
             android:id="@+id/contact_psychologist"
             android:layout_width="315dp"
             android:layout_height="49dp"
+            android:layout_marginHorizontal="16dp"
             android:background="@drawable/shimmer_button"
-            android:textAlignment="textStart"
-            android:textColor="@color/soft_black"
-            android:textSize="16sp"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -114,6 +99,5 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.982" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
