--- a/app/src/main/res/layout/shimmer_psychologists.xml
+++ b/app/src/main/res/layout/shimmer_psychologists.xml
@@ -9,11 +9,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_psychologist"
         android:layout_width="wrap_content"
-        android:layout_height="440dp"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@drawable/speech_bubble"
-        android:padding="5dp"
-        android:paddingBottom="1000dp"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +23,9 @@
             android:layout_width="240dp"
             android:layout_height="240dp"
             android:src="@drawable/c8c9c9_shimmer"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.01" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_psychologist_type"
@@ -38,7 +34,7 @@
             android:src="@drawable/c8c9c9_shimmer"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.78"
+            app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.477" />
@@ -50,7 +46,7 @@
             android:src="@drawable/c8c9c9_shimmer"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.21"
+            app:layout_constraintHorizontal_bias="0.15"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.043" />
@@ -59,38 +55,34 @@
             android:id="@+id/psychologist_name"
             android:layout_width="200dp"
             android:layout_height="20dp"
+            android:layout_marginVertical="16dp"
             android:background="#C9C9C8"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/psychologist_specialist"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.638" />
+            app:layout_constraintTop_toBottomOf="@+id/image_psychologist" />
 
         <TextView
             android:id="@+id/psychologist_specialist"
             android:layout_width="250dp"
             android:layout_height="64dp"
+            android:layout_marginBottom="16dp"
             android:background="#C9C9C8"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/contact_psychologist"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.813" />
+            app:layout_constraintTop_toBottomOf="@+id/psychologist_name" />
 
         <Button
             android:id="@+id/contact_psychologist"
             android:layout_width="315dp"
             android:layout_height="49dp"
-            android:layout_marginHorizontal="16dp"
             android:background="@drawable/shimmer_button"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.578"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.982" />
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
